--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-wasm": "^4.22.0",
     "@tensorflow/tfjs-core": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "@vladmandic/face-api": "^1.7.15",
     "atob": "^2.1.2",
     "bcryptjs": "^2.4.3",
